--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ div {
   box-sizing: border-box;
 }
 
+.clearfix:after {
+  content: '';
+  display: table;
+  width: 100%;
+  clear: both;
+
+
+}
+
 header {
   background: url(../img/first-bg.jpg) no-repeat center top/cover;
   height: 600px;
@@ -44,5 +53,40 @@ nav {
   color: #fff;
   text-transform: uppercase;
   margin-right: 41px;
-  ]
+}
+
+.header_title {
+  color: #fff;
+  text-transform: uppercase;
+  margin-top: 200px;
+  text-align: center;
+}
+
+
+.titles1 {
+  font-size: 40px;
+
+}
+
+.header_title h1 {
+  font-size: 75px;
+  font-weight: bold;
+  margin-top: 50px;
+}
+
+.button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 60px;
+  background-color: #fed136;
+  color: #484543;
+  width: 240px;
+  padding: 20px 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 3px;
+  border-color: #fed136;
+  border-style: none;
+
 }
